--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
     "@markdoc/markdoc": "^0.2.1",
+    "@tailwindcss/container-queries": "0.1.0",
     "@tailwindcss/typography": "^0.5.9",
     "astro": "^1.9.2",
     "astro-markdoc-renderer": "0.0.1-alpha.1",
     "globby": "^13.1.3",
     "gray-matter": "^4.0.3",
     "slugify": "^1.6.5",
-    "tailwindcss": "^3.2.4",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "prettier-plugin-astro": "^0.7.2",
     "sass": "1.58.3",
+    "tailwindcss": "3.2.7",
     "typescript": "^4.9.4"
   }
 }
