--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "prettier-plugin-astro": "^0.7.2",
+    "prettier-plugin-astro": "0.7.2",
     "sass": "1.58.3",
     "tailwindcss": "3.2.7",
     "typescript": "^4.9.4"
