--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/prism": "^1.0.2",
@@ -26,9 +27,15 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "prettier": "^3.1.0",
     "prettier-plugin-astro": "0.7.2",
     "sass": "1.58.3",
     "tailwindcss": "3.2.7",
     "typescript": "^4.9.4"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "semi": false,
+    "singleQuote": true
   }
 }
