--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
   "editor.formatOnSave": true,
-  "prettier.useEditorConfig": false
+  "prettier.useEditorConfig": false,
+  "prettier.documentSelectors": ["**/*.astro"],
+  "[astro]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "files.exclude": {},
+  "files.associations": {
+    "*.mdoc": "markdown"
+  }
 }
