--- a/package.json
+++ b/package.json
@@ -1,41 +1,31 @@
 {
   "name": "diy-multideck-website",
-  "version": "0.0.1",
-  "private": true,
+  "type": "module",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "clean": "rm -rf dist",
-    "format": "prettier --write ."
+    "format": "prettier --write . --plugin=prettier-plugin-astro"
   },
   "dependencies": {
-    "@astrojs/prism": "^1.0.2",
-    "@astrojs/rss": "^2.0.0",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^2.1.3",
-    "@markdoc/markdoc": "^0.2.1",
-    "@tailwindcss/container-queries": "0.1.0",
-    "@tailwindcss/typography": "^0.5.9",
-    "astro": "^1.9.2",
-    "astro-markdoc-renderer": "0.0.1-alpha.1",
-    "globby": "^13.1.3",
-    "gray-matter": "^4.0.3",
-    "slugify": "^1.6.5",
-    "zod": "^3.20.2"
+    "@astrojs/check": "0.3.1",
+    "@astrojs/markdoc": "0.7.2",
+    "@astrojs/sitemap": "3.0.3",
+    "@astrojs/tailwind": "5.0.2",
+    "astro": "3.6.4",
+    "typescript": "5.3.2"
   },
   "devDependencies": {
-    "prettier": "^3.1.0",
-    "prettier-plugin-astro": "0.7.2",
-    "sass": "1.58.3",
-    "tailwindcss": "3.2.7",
-    "typescript": "^4.9.4"
-  },
-  "prettier": {
-    "trailingComma": "es5",
-    "semi": false,
-    "singleQuote": true
+    "@tailwindcss/container-queries": "0.1.1",
+    "@tailwindcss/typography": "0.5.10",
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.32",
+    "prettier": "3.1.0",
+    "prettier-plugin-astro": "0.12.2",
+    "sass": "1.69.5",
+    "tailwindcss": "3.3.6"
   }
 }
