--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "3.1.0",
     "prettier-plugin-astro": "0.12.2",
     "sass": "1.69.5",
+    "tailwind-safe-container": "^1.0.0",
     "tailwindcss": "3.3.6"
   }
 }
