--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "5.3.2"
   },
   "devDependencies": {
+    "@savvywombat/tailwindcss-grid-areas": "^3.1.0",
     "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.10",
     "autoprefixer": "10.4.16",
