--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.10",
     "autoprefixer": "10.4.16",
+    "clsx": "^2.0.0",
     "postcss": "8.4.32",
     "prettier": "3.1.0",
     "prettier-plugin-astro": "0.12.2",
     "sass": "1.69.5",
+    "tailwind-merge": "^2.2.0",
     "tailwind-safe-container": "^1.0.0",
     "tailwindcss": "0.0.0-insiders.af7e610"
   }
