--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,10 +4,7 @@
     {
       "label": "install",
       "type": "shell",
-      "command": "pnpm i",
-      "runOptions": {
-        "runOn": "folderOpen"
-      }
+      "command": "pnpm i"
     },
     {
       "label": "dev",
