--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@tailwindcss/typography": "0.5.10",
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
+    "jszip": "^3.10.1",
     "postcss": "8.4.32",
     "prettier": "3.1.0",
     "prettier-plugin-astro": "0.12.2",
     "sass": "1.69.5",
     "tailwind-merge": "^2.2.0",
     "tailwind-safe-container": "^1.0.0",
-    "tailwindcss": "0.0.0-insiders.af7e610"
+    "tailwindcss": "0.0.0-insiders.af7e610",
+    "vite": "^6.0.5"
   }
 }
