--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "typescript": "5.3.2"
   },
   "devDependencies": {
-    "@savvywombat/tailwindcss-grid-areas": "^3.1.0",
+    "@savvywombat/tailwindcss-grid-areas": "4.0.0",
     "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.10",
     "autoprefixer": "10.4.16",
@@ -31,7 +31,7 @@
     "sass": "1.69.5",
     "tailwind-merge": "^2.2.0",
     "tailwind-safe-container": "^1.0.0",
-    "tailwindcss": "0.0.0-insiders.af7e610",
+    "tailwindcss": "3.4.17",
     "vite": "^6.0.5"
   }
 }
