--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@astrojs/sitemap": "3.0.3",
     "@astrojs/tailwind": "5.0.2",
     "astro": "3.6.4",
+    "astro-icon": "^1.1.5",
     "typescript": "5.3.2"
   },
   "devDependencies": {
+    "@iconify-json/game-icons": "^1.2.1",
+    "@iconify-json/tabler": "^1.2.13",
     "@savvywombat/tailwindcss-grid-areas": "4.0.0",
     "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.10",
