--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
     "jszip": "^3.10.1",
+    "lodash": "^4.17.21",
     "postcss": "8.4.32",
     "prettier": "3.1.0",
     "prettier-plugin-astro": "0.12.2",
