--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "typescript": "5.3.2"
   },
   "devDependencies": {
