--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     "@astrojs/react": "^4.1.2",
     "@astrojs/sitemap": "3.0.3",
     "@astrojs/tailwind": "5.0.2",
+    "@monaco-editor/react": "^4.6.0",
     "@nextui-org/react": "^2.6.10",
+    "@tabler/icons-react": "^3.26.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@uiw/react-split": "^5.9.3",
     "astro": "3.6.4",
     "astro-icon": "^1.1.5",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
-    "typescript": "5.3.2"
+    "split.js": "^1.6.5",
+    "typescript": "5.3.2",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@iconify-json/game-icons": "^1.2.1",
