--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@uiw/react-split": "^5.9.3",
     "astro": "3.6.4",
     "astro-icon": "^1.1.5",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-resplit": "^1.3.2",
     "react-syntax-highlighter": "^15.6.1",
     "split.js": "^1.6.5",
     "typescript": "5.3.2",
