--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "tailwind-merge": "^2.2.0",
     "tailwind-safe-container": "^1.0.0",
     "tailwindcss": "3.4.17",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "zod-to-json-schema": "^3.24.1"
   }
 }
