--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-markdown": "^9.0.1",
     "react-resplit": "^1.3.2",
     "react-syntax-highlighter": "^15.6.1",
