--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/react": "^4.1.2",
     "@astrojs/sitemap": "3.0.3",
     "@astrojs/tailwind": "5.0.2",
+    "@iconify-json/fa6-regular": "^1.2.3",
+    "@iconify-json/fa6-solid": "^1.2.3",
     "@monaco-editor/react": "^4.6.0",
     "@nextui-org/react": "^2.6.10",
     "@tabler/icons-react": "^3.26.0",
