--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@iconify-json/game-icons": "^1.2.1",
     "@iconify-json/tabler": "^1.2.13",
     "@iconify/react": "^5.1.0",
+    "@monaco-editor/loader": "^1.4.0",
     "@savvywombat/tailwindcss-grid-areas": "4.0.0",
     "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.10",
@@ -50,6 +51,7 @@
     "clsx": "^2.0.0",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
+    "monaco-editor": "^0.52.2",
     "postcss": "8.4.32",
     "prettier": "3.1.0",
     "prettier-plugin-astro": "0.12.2",
