--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "@savvywombat/tailwindcss-grid-areas": "4.0.0",
     "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.10",
-    "@types/lodash": "^4.17.15",
+    "@types/lodash-es": "^4.17.12",
     "autoprefixer": "10.4.16",
     "clsx": "^2.1.1",
     "jszip": "^3.10.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "monaco-editor": "^0.52.2",
     "postcss": "8.4.32",
     "prettier": "3.1.0",
